# water_meter

./: .pre-commit-config.yaml  pyproject.toml  test.ipynb
data/: dataset.py  transform.py
nets/unet/: unet.py  unet_blocks.py
notebooks/: WaterMeter.ipynb
scripts/: lighting.py  train.py
uitls/: dataset.py
utils/: dataset.py
water_meter/data/: dataset.py  transform.py
water_meter/lightning/: segmentation_module.py
water_meter/models/unet/: unet.py  unet_blocks.py
